# retinal-layer-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
model/: loss.py  models_network_deep.py  non_local.py
notebooks/model_training/: ird_direct_application_healthy.ipynb  ird_direct_training_weighted_CE.ipynb  ird_domain_adaption.ipynb  ird_transfer_learning.ipynb  train_healthy_patients_subset_weighted_CE.ipynb  train_healthy_patients_whole_trainset_CE.ipynb
notebooks/utils/: anonymize_npy.ipynb  thickness_Map_calculation_etdrs.ipynb  transform_segmentation_to_npy.ipynb
retinal_seg/: __init__.py  config.py
retinal_seg/analysis/: __init__.py  dicom_table.py  etdrs.py  thickness_map.py
retinal_seg/data/: __init__.py  loader.py  preprocessing.py
retinal_seg/model/: __init__.py  blocks.py  losses.py  unet.py
utils/: dicom_table.py  etdrs_utils.py  get_class_distribution.py  helper_functions.py  map.py  thickness_map.py
