[project]
name = "retinal-layer-segmentation"
version = "0.1.0"
description = "Multi-class retinal layer segmentation from Heidelberg Spectralis OCT volumes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Robin Mittas", email = "robin.mittas@googlemail.com" },
]

dependencies = [
  "tensorflow>=2.13.0",
  "keras>=3.0",
  "numpy>=1.23.0",
  "opencv-python-headless>=4.8.0",
  "matplotlib>=3.7.0",
  "pydicom>=2.4.0",
  "SimpleITK>=2.3.0",
  "pandas>=2.0.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "tqdm>=4.65.0",
]

[project.urls]
Repository = "https://github.com/robinmittas/retinal-layer-segmentation"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["retinal_seg*"]

# ------------------------------------------------------------------
# Code quality tooling
# ------------------------------------------------------------------

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
line_length = 100
